# OkMoK

./: .gitmessage.txt  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task-issue-template.md
hybrid/: next.config.js  package-lock.json  package.json
hybrid/config/: db.ts
hybrid/src/apollo/: resolver.ts  schema.ts  typeDefs.ts
hybrid/src/app/: head.tsx  layout.tsx
hybrid/src/hooks/: useDrawOkmok.tsx  useEnterPage.tsx  useGame.tsx  useRequest.tsx  useTimer.tsx  useTurn.tsx
hybrid/src/pages/: 404.tsx  _app.tsx  _document.tsx  game.tsx  index.tsx  login.tsx
hybrid/src/socket/: requestHandler.tsx  responseHandler.tsx  variable.ts  (+2 more)
sockerserver/scripts/: check_install.sh
socketserver/: Makefile
socketserver/app/: CMakeLists.txt
socketserver/app/srcs/: main.cpp
socketserver/app/srcs/game/: Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameTimer.cpp  GameTimer.hpp  Okmok.hpp
socketserver/app/srcs/game/linux/: GameTimer.cpp  GameTimer.hpp
socketserver/app/srcs/game/mac/: GameTimer.cpp  GameTimer.hpp
socketserver/app/srcs/packet/: Packet.hpp  PacketErrorCode.hpp  PacketID.hpp  PacketManager.cpp  PacketManager.hpp  RecvRingBuffer.hpp
socketserver/app/srcs/room/: Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp
socketserver/app/srcs/server/: WebSocketServer.cpp  WebSocketServer.hpp
socketserver/app/srcs/session/: Session.hpp
socketserver/app/srcs/user/: User.cpp  User.hpp  UserManager.cpp  UserManager.hpp
socketserver/app/srcs/util/: PocoType.hpp
socketserver/dockers/: docker-compose.yml
socketserver/scripts/: check_install.sh
(+65 files in other folders)
